services/init-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: init-service
  namespace: replit-system

spec:
  selector:
    app: init-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000

  type: ClusterIP
